2013-03-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* tests/unit_test/unit-test.mk: Regen.

2013-03-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Import Julien Marquegnies's implementation of XY-Cut layout
	analysis algorithm.

	* scribo/layout/internal/hist_info.hh,
	* scribo/layout/internal/node.hh,
	* scribo/layout/xy_cut.hh,
	* tests/layout/Makefile.am,
	* tests/layout/xy_cut.cc: New.

	* tests/Makefile.am: Add new subdir.

2013-03-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Remove deprecated programs.

	* demo/demat/demat.pro,
	* demo/demat/demat.qrc,
	* demo/demat/src/doc_type.hh,
	* demo/demat/src/main.cc,
	* demo/demat/src/main_window.cc,
	* demo/demat/src/main_window.hh,
	* demo/demat/src/mln_widgets.cc,
	* demo/demat/src/preprocessing_task.hh,
	* demo/demat/src/process_args.hh,
	* demo/demat/src/runner.cc,
	* demo/demat/src/runner.hh,
	* demo/demat/ui/main_window.ui,
	* demo/review/Makefile.am,
	* demo/review/icons/document-open.png,
	* demo/review/icons/edit-find.png,
	* demo/review/icons/format-indent-more.png,
	* demo/review/icons/go-next.png,
	* demo/review/icons/image-x-generic.png,
	* demo/review/icons/list-add.png,
	* demo/review/icons/ocr.png,
	* demo/review/icons/text-x-generic.png,
	* demo/review/icons/view-refresh.png,
	* demo/review/icons/x-office-spreadsheet.png,
	* demo/review/mainwindow.ui,
	* demo/review/review.qrc,
	* demo/review/src/main.cc,
	* demo/review/src/mainwindow.cc,
	* demo/review/src/mainwindow.hh,
	* demo/shared/icons/Symbols-Delete-icon.png,
	* demo/shared/icons/accept-icon.png,
	* demo/shared/icons/close.gif,
	* demo/shared/icons/crop-icon.png,
	* demo/shared/icons/image-add-icon.png,
	* demo/shared/icons/image-edit-icon.png,
	* demo/shared/icons/image-multi-icon.png,
	* demo/shared/icons/image-next-icon.png,
	* demo/shared/icons/image-remove-icon.png,
	* demo/shared/icons/next-icon.png,
	* demo/shared/icons/olena_smaller.jpg,
	* demo/shared/icons/page-down-icon.png,
	* demo/shared/icons/page-search-icon.png,