@@ -1,3 +1,11 @@
+2012-02-01  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	Fix scribo doc (un)installation.
+
+	* Makefile.am: Add doc in SUBDIRS.
+
+	* doc/Makefile.am: Fix install/uninstall rules.
+
 2013-03-07  Guillaume Lazzara  <z@lrde.epita.fr>
 
 	* tests/unit_test/unit-test.mk: Regen.
